--- a/week1/style.css
+++ b/week1/style.css
@@ -7,21 +7,26 @@
         font-size: 20px;
     }
 
+    a {
+        text-decoration: none;
+        color: rgb(116, 116, 116);
+    }
+
+    a:hover {
+        color: rgb(154, 154, 154);
+    }
+
     #hamburger_nav {
         position: absolute;
         display: none;
         list-style: none;
         right: 8px;
+        top: 25px;
         padding: 15px;
         background-color: rgba(255, 255, 255, 0.512);
         border-radius: 15px;
     }
 
-    .hamburger_menu:hover #hamburger_nav {
-        display: block;
-        z-index: 1;
-    
-    }
 
     /*----------------------- 01 nav banner --------------------*/
 
@@ -174,12 +179,6 @@
         height: 30px;
         width: 100%;
     }
-
-    
-
-    
-
-
 
     
         
