--- a/week1/style.css
+++ b/week1/style.css
@@ -38,6 +38,10 @@ body  {
         
     }
 
+    .nav_title {
+        padding: 0 20px;
+    }
+
     .itemlist {
         display: flex;
         
@@ -45,6 +49,7 @@ body  {
     
     .item {
         padding: 0 10px;
+
     }
 
     .item:nth-of-type(5) {
@@ -179,7 +184,7 @@ body  {
 
     .item:nth-of-type(5)>img {
         height: 30px;
-        width: 100%;
+        width: 40px;
     }
 
     
