--- a/week4/public/css/main.css
+++ b/week4/public/css/main.css
@@ -12,15 +12,19 @@
     font-weight: 600;
 }
 
-.login_form {
+.login_form, .square_form {
     font-weight: 600;
     padding: 10px;
 }
 
-.login_form button {
+.login_form button, .square_form button {
     margin:15px;
     padding: 8px;
     background-color: rgb(227, 217, 206);
     border: none;
     color:rgb(145, 134, 127)
+}
+
+.square_form_title {
+    font-weight: 600;
 }
