--- a/week4/templates/index.html
+++ b/week4/templates/index.html
@@ -21,6 +21,13 @@
                 <button>登入</button>
             </form>
         </div>
+        <div class="square_form">
+            <div class="square_form_title">計算正整數的平方</div>
+            <form action="{{ url_for('count') }}" method="get">
+                <span>正整數　</span><input type="number" name="sq-number" id="sq-number">
+                <button>計算</button>
+            </form>
+        </div>
 
     </div>
     
