--- a/week4/templates/square.html
+++ b/week4/templates/square.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>失敗頁面</title>
+    <title>正整數平方計算結果</title>
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
     <div class="login_box">
 
-        <div class="header">失敗頁面</div>
+        <div class="header">正整數平方計算結果</div>
         <div class="login_form">
-            <span>{{ data }}</span>
+            <span>{{ num }}</span>
             <br>
             <a href="/">回首頁</a>
-
         </div>
 
     </div>
